--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,7 +27,8 @@
     <string name="sex_prompt">请选择您的性别</string>
     <string name="man">男</string>
     <string name="woman">女</string>
-    <string name="cancel">取  消</string>
+    <string name="confirm">确&#160;定</string>
+    <string name="cancel">取&#160;消</string>
     <string name="user_name_display">呢称：</string>
     <string name="sex_display">性别</string>
     <string name="add_friend">添加好友</string>
