# Decipher Stranger # MainPage # Created by penghaitao 5/7

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,9 +33,12 @@
     <string name="sex_display">性别</string>
     <string name="add_friend">添加好友</string>
     <string name="nearby_info_back">返  回</string>
-    <string name="chat">聊天</string>
-    <string name="friend_list">通讯录</string>
-    <string name="discover">探索</string>
+
+    <string name="friends_trends">动态</string>
+    <string name="friends_invitation">邀请券</string>
+    <string name="friends_near">附近的人</string>
+    <string name="friends_map">陌生人地图</string>
+    <string name="game">游戏</string>
     
     <string name="shake">摇一摇</string>
     <string name="shakeSettings">摇一摇设置</string>
