--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,15 +57,11 @@
 
     <string name="game_rsp">石头剪刀布</string>
     <string name="game_number">猜数字测缘分</string>
+    <string name="grade_settings">难度设置</string>
+    <string name="save">保存</string>
     <string name="Setting_Text">设&#160;&#160;置</string>
     <string name="Help_Text">帮&#160;&#160;助</string>
     <string name="Quit_Text">退&#160;&#160;出</string>
-    <string name="Grade1">一把定江山</string>
-    <string name="Grade2">加点难度吧</string>
-    <string name="Grade3">测一测人品</string>
-    <string name="Grade4">难到没朋友</string>
-    <string name="Grade5">留一线生机</string>
-    <string name="Grade0">自定义</string>
     
     <string name="drop_down_refresh">下拉可以刷新!</string>
     <string name="loosen_refresh">松开可以刷新!</string>
