# Decipher Stranger # MyApplication # Created by penghaitao 5/9

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,7 +56,7 @@
     <string name="shake_effect">震动</string>
 
     <string name="game_rsp">石头剪刀布</string>
-    <string name="game_number">猜数字测缘分</string>
+    <string name="game_number">猜数字</string>
     <string name="grade_settings">难度设置</string>
     <string name="save">保存</string>
     <string name="Setting_Text">设&#160;&#160;置</string>
