# Decipher Stranger # MyApplication # Created by penghaitao 5/9

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,7 @@
     <string name="portrait">头像</string>
     <string name="name">昵称</string>
     <string name="account_lab">解密账号</string>
+    <string name="sex">性别</string>
     <string name="sound">声音</string>
     <string name="main_quit">退&#160;&#160;&#160;&#160;出</string>
     
