--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="re_password_input">请再次输入密码</string>
     <string name="username_input">请输入昵称</string>
     <string name="email_input">请输入邮箱</string>
+    <string name="phone_input">请输入手机号</string>
     <string name="birth_input">请输入出生年月</string>
     <string name="sex_input">请选择性别</string>
     <string name="next_step">下一步</string>
