--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,5 +51,6 @@
     <string name="str_recorder_recording">松开 结束</string>
     <string name="str_recorder_want_cancel">松开手指，取消发送</string>
     <string name="str_recorder_cancel_send">手指上滑，取消发送</string>
+    <string name="update">上传</string>
 
 </resources>
