--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,7 @@
     <string name="sound">声音</string>
     <string name="main_quit">退    出</string>
     <string name="shake">摇 一 摇</string>
+    <string name="near_friends">附近的人</string>
     <string name="shake_effect">震动</string>
     <string name="game_rsp">石头剪刀布</string>
     <string name="game_number">猜数字</string>
